option ('distributor_name',
        type: 'string',
        value: 'GNOME',
        description: 'Distributor name used in HTTP user agent')

option ('distributor_version',
        type: 'string',
        value: '3',
        description: 'Distributor version used in HTTP user agent')

option ('installed_tests',
        type: 'boolean',
        value: false,
        description: 'enable installed unit tests')

option ('flatpak',
        type: 'boolean',
        value: false,
        description: 'Whether Boxes is going to run in a Flatpak')

option ('profile',
  type: 'combo', choices: [
    'default',
    'development'
  ],
  value: 'default'
)

option ('uefi',
        type: 'boolean',
        value: true,
        description: 'Allow installing operating systems with UEFI')
