@YELP_HELP_RULES@

HELP_ID = gnome-boxes

HELP_MEDIA = figures/boxes_icon.png

HELP_FILES = index.page			\
	clipboard.page			\
	connect.page			\
	continuous.page			\
	create.page			\
	delete.page			\
	disk-images.page		\
	interface.page			\
	legal.xml			\
	search.page			\
	shortcuts.page			\
	shutdown.page			\
	supported-protocols.page	\
	system-requirements.page	\
	usb-redirection.page		\
	virtualization.page		\
	what-is-a-virtual-machine.page	\
	why-do-i-need-virtual-machine.page

HELP_LINGUAS = de el es fr pt_BR
