@YELP_HELP_RULES@

HELP_ID = gnome-boxes

HELP_MEDIA = figures/boxes_icon.png     \
	figures/input-keyboard-symbolic.svg	\
	figures/open-menu-symbolic.svg

HELP_FILES = index.page			\
	clipboard.page			\
	connect.page			\
	continuous.page			\
	create.page			\
	delete.page			\
	disk-images.page		\
	interface.page			\
	keystrokes.page			\
	legal.xml			\
	prop-system.page		\
	prop-trouble.page		\
	search.page			\
	shared-folders.page		\
	shortcuts.page			\
	shutdown.page			\
	snapshot-create.page		\
	snapshot-delete.page		\
	snapshot-rename.page		\
	snapshot-revert.page		\
	supported-protocols.page	\
	system-requirements.page	\
	usb-redirection.page		\
	virtualization.page		\
	what-is-a-virtual-machine.page	\
	why-do-i-need-virtual-machine.page

HELP_LINGUAS = cs de el es fr hu it ko pl pt_BR sv

EXTRA_DIST = meson.build

-include $(top_srcdir)/git.mk
